--- a/README.textile
+++ b/README.textile
@@ -1,12 +1,20 @@
-h1. 中文
+<!-- h1. 中文 -->
 
-////"for English please click":#english////
+<!-- "for English please click":#english -->
 
-h2. remember.js是一个智能的组件，它的意思是“记得” 
+h2. remember.js
 
-<pre>
-它能记录用户对下拉菜单（<select>）、单选按钮（<input type="radio">）、选择框（<input type="checkbox">）的选择及输入框(<input>，type不为"radio"和"checkbox")、输入区域(<textarea>)的值，并在用户下次载入页面时，按照上次记录的值还原用户的选择及输入的值。
-</pre>
+它是一个智能的组件，它的意思是“记得” 
+它能记录用户对下拉菜单 @<select>@ 、单选按钮 @<input type="radio">@ 、选择框 @<input type="checkbox">@ 的选择及输入框 @<input>，type不为"radio"和"checkbox"@ 、输入区域 @<textarea>@ 的值，并在用户下次载入页面时，按照上次记录的值还原用户的选择及输入的值。
+
+支持的浏览器如下，也就是说，目前还在广泛使用的浏览器中，只有IE6\IE7\IE8不支持：
+
+* IE 9+
+* Firefox 3+
+* Safari 3.2+
+* chrome 5+
+* iOS 3.2+
+* Android 2.1+
 
 h2. 当前用户
 * "百度地图":http://map.baidu.com/
@@ -18,206 +26,126 @@ h3. Basic
 
 在你HTML代码的尾部引入remember.js：
 
-<pre><script src="jremember.js"></script></pre>
+<pre><script src="remember.js"></script></pre>
 
-你也可以使用我们的CDN服务器：
+<!-- 你也可以使用我们的CDN服务器： -->
 
-////写到这了////
+<!-- <pre><script src="??????????"></script></pre> -->
 
-<pre><script src="http://webmap2.map.bdimg.com/yyfm/jQuery_1.x/1.10.2/js/jQuery_1.x.min.js"></script>
-<!-- 或 <script src="http://webmap2.map.bdimg.com/yyfm/zepto_default/1.1.2/js/zepto_default.min.js"></script> -->
-<script src="http://webmap3.map.bdimg.com/yyfm/lazyLoad/1.0.0/js/lazyLoad.min.js"></script></pre>
+接着你为所有要记录的“下拉菜单 @<select>@ 、单选按钮 @<input type="radio">@ 、选择框 @<input type="checkbox">@ 及输入框 @<input>，type不为"radio"和"checkbox"@ 、输入区域 @<textarea>@ ”（我们称它为“可交互元素”，下同）均赋予一个id，如：
 
-你必须改变你的HTML代码。真实图像的URL必须被放入到`data-original`属性中。给所有需要延迟加载图片一个特殊的class是一个好主意。这样你就可以很容易地控制哪些图片会被插件绑定到。请注意，你的图片应该有宽度和高度属性。
+<pre><input id="checkbox_0" type="checkbox"/></pre>
 
-<pre><img class="lazy" data-original="img/example.jpg" width="640" height="480"></pre>
+然后加入下面一句代码，即可记录页面中所有区域内上述元素的选择或输入值：
 
-然后你在你的代码中加入:
-
-<pre>$("img.lazy").lazyload();</pre>
-
-这会使得所有class为lazy的图片被延迟加载
+<pre><script>
+    remember()
+</script></pre>
 
 h3. 高级
 
-h4. 在AJAX加载的内容中使用
+h4. 指定记录的区域
 
-<pre><img class="lazy" data-original="img/example.jpg" width="765" height="574"></pre>
+remember(wrapperDOM)方法的第一个参数 @wrapperDOM@ 可以是某个dom元素，或某个dom元素id的字符串。
+可以通过传递区域最完成dom元素或它的id来指定记录的区域：
 
-<pre>
-$("#container").one("click", function() {
-    $("#container").load("images.html", function(response, status, xhr) {
-        $("img.lazy").lazyload();
-    });              
-});
-</pre>
+<pre><script>
+remember('wrapper')
+// 或 remember(document.getElementById('wrapper'))
+</script></pre>
 
-请参阅 `enabled_ajax.html`
+可以指定页面中的多个区域，通过调用多次 @remember@ 方法，传递不同的 @wrapperDOM@ 参数来实现
+但不能是：指定的`wrapperDOM`已被占用，或与另一个已被使用的`wrapperDOM`有包含或被包含的关系
 
-h4. 与css背景图一起使用
+<pre><script>
+remember('area1')
+remember('area2')
+</script></pre>
 
-<pre><div class="lazy" data-original="img/bmw_m1_hood.jpg" style="background-image: url('img/grey.gif'); width: 765px; height: 574px;"></div></pre>
+h4. 不记录页面中的某些“可交互元素”
 
-<pre>
-$("div.lazy").lazyload();
-// 或加入某些效果
-$("div.lazy").lazyload({
-    effect : "fadeIn"
-});
-</pre>
+最简单的方法就是不为这些“可交互元素”赋予id，或者将它们的id通过下面的方式加入到忽略id数组。
+对于单选按钮 @<input type="radio">@ ，你需要将它们每一个 @<input>@ 的id都添加进去
 
-请参阅 `enabled_background.html`
+<pre><script>
+remember(document,{
+    ignoreIds:['select_0','radio_0','radio_1']
+})
+</script></pre>
 
-h4. 图片在某个容器中滚动
+h4. 自行控制下一次页面载入时“可交互元素”的还原行为
 
-<pre><img class="lazy" data-original="img/example.jpg" width="765" height="574"></pre>
+默认情况下，在下一次载入页面时，该组件会将所有符合要求且未被忽略的“可交互元素”赋予上一次的值，你也可以获取这个值来进行其它操作。通过配置一个函数的形式来操作它。如果该配置函数返回true，则继续执行组件原本的设定值操作；如果函数返回值为false，则不继续执行组件原本的设定值操作
 
-<pre>
-#container {
-    height: 600px;
-    overflow: scroll;
-}
-</pre>
+<pre><script>
+remember(document,{
+    handleSetValueFromCacheFuncs:{
+        'input_0':function(value,wrapperDOM){
+            // this 指向当前dom，本例中即id为input_0的元素
+            // value 当前存储值，如果this是一个<textarea>，请用remember.configs.textareaLineFeedHolder替换回换行符，如 value.replace(remember.configs.textareaLineFeedHolder,'\n')
+            //  如果this是一个<input type="radio">，并且它没有指定value值，那么可以通过remember.configs.noValueRadioIndexPrefix获取在所有name相同的<input type="radio">中它的位置，如 value.replace(remember.configs.noValueRadioIndexPrefix,'')
+            //  如果this是一个<input type="checkbox">，并且它没有指定value值，如果他被选中了（this.checked），那么value为1，否则为0
+            // wrapperDOM是初始化时，传入的wrapperDOM参数对应的dom
+            return true // 继续执行组件原本的设定值操作
+            // return false // 不继续执行组件原本的设定值操作
+        },
+    }
+})
+</script></pre>
 
-<pre>
-$("img.lazy").lazyload({         
-    effect : "fadeIn",
-    container: $("#container")
-});
-</pre>
+h4. 修改默认配置
 
-请参阅 `enabled_container.html`
+可以通过修改remember.configs对象上的各个字段来打到修改默认配置的效果：
 
-h4. 在`scrollstop`(或其他自定义事件)时判断是否应该加载图片
+# @noValueRadioIndexPrefix@ 默认值 @'__R_NVRIP__'@ // 有一组 @name@ 值相同的 @<input type="radio">@ ，但当前被选中的radio可能没有 @value@ 值，我们就要一个模拟的值——用它在这一组radio中的位置来代替它的值来存储。`noValueRadioIndexPrefix`就是这个假值的前缀。举个例子：如果第三个radio被选中了，我们将noValueRadioIndexPrefix+'3'，默认配置下即`__R_NVRIP__2`当做模拟值来存储
+# @oldValueAttributeName@ 默认值 @'data-roldvalue'@ // @<input>，type不为"radio"和"checkbox"@ 和 @textarea@ 必须将旧值存储起来，以便于检查值是否发生了变化。我们将旧制存储到这个dom属性中
+# @textareaLineFeedHolder@ 默认值 @'__R_TLFH_ramdom_769768842_ramdom_'@ // textarea的换行符会在与其他字符串连接时丢弃。为了避免这种情况，我们在这之前用这个属性的值将换行符替换到。在还原时再替换回来
+# @localStorageKeyPrefix@ 默认值 @'__R_LSK__'@ // 一个特殊的key，用于localStorage的key的前缀。为了避免冲突，它的值应该有一些复杂度。
 
-<pre><img class="lazy" data-original="img/example.jpg" width="765" height="574"></pre>
+h3. 详细接口
 
-<pre>
-<script src="jquery.scrollstop.js" type="text/javascript"></script>
-</pre>
+remember对象实例
+每当你调用remember()时，如果没有出错，它都会返回一个remember的对象实例，这个对象实例能让你做进一步精细的控制。
 
-<pre>
-$("img.lazy").lazyload({
-  event: "scrollstop"
-});
-</pre>
+h4. wrapperDom属性
 
-请参阅 `enabled_gazillion.php`
+指向当前remember对象实例的wrapperDom，即使你初始化时的wrapperDom参数传递的是dom的id，也会指向实际的dom。当初始化时传递的wrapperDom参数不合法，则指向document
 
-h4. 图片在某个容器中的水平方向滚动
+h4. handleSetValueFromCacheFuncs属性
 
-<pre><img class="lazy" data-original="img/example.jpg" width="765" height="574"></pre>
+指向当前remember对象实例初始化时配置项里面的handleSetValueFromCacheFuncs对象，如果不合法，则为 @{}@
 
-<pre>
-#container {
-    width: 800px;
-    overflow: scroll;
-}
-#inner_container {
-    width: 4750px;
-}
-</pre>
+h4. ignoreIds属性
 
-<pre>
-$("img.lazy").lazyload({
-    container: $("#container")
-});
-</pre>
+指向当前remember对象实例初始化时配置项里面的ignoreIds数组，如果不合法，则为 @[]@
 
-请参阅 `enabled_wide_container.html`
+h4. setValue方法
 
-h4. 加入fadein效果
+<pre><script>
+var myRemember = remember(wrapperDom,options)
+myRemember.setValue()
+</script></pre>
 
-<pre><img class="lazy" data-original="img/example.jpg" width="765" height="574"></pre>
+这个方法会在调用remember()，生成remember对象实例时自动调用一次，它的作用是将缓存储的上一次“可交互元素”的值设置到对应“可交互元素”上。
 
-<pre>
-$("img.lazy").lazyload({
-    effect : "fadeIn"
-});
-</pre>
+h4. getKvObj方法
 
-请参阅 `enabled_fadein.html`
+<pre><script>
+var myRemember = remember(wrapperDom,options)
+myRemember.getKvObj()
+</script></pre>
 
-h4. 在5秒延迟后加载图片
+这个方法返回当前wrapperDom内所有满足监听条件的（有id，不在忽略id列表内）“可交互元素”的键->值为id->value的对象
 
-<pre><img class="lazy" src="img/grey.gif" data-original="img/example.jpg" width="765" height="574"></pre>
+h4. stop方法
 
-<pre>
-$(function() {          
-    $("img.lazy").lazyload({
-        event : "sporty"
-    });
-});
- 
-$(window).bind("load", function() { 
-    var timeout = setTimeout(function() {
-        $("img.lazy").trigger("sporty")
-    }, 5000);
-});
-</pre>
+<pre><script>
+var myRemember = remember(wrapperDom,options)
+myRemember.stop()
+</script></pre>
 
-请参阅 `enabled_timeout.html`
-
-h4. 在水平方向很宽的页面中使用
-
-<pre><img class="lazy" data-original="img/example.jpg" width="765" height="574"></pre>
-
-<pre>
-$("img.lazy").lazyload({
-    effect: "fadeIn"
-});
-</pre>
-
-请参阅 `enabled_wide.html`
-
-h4. 在只能在竖直方向滚动的页面中使用
-
-<pre><img class="lazy" data-original="img/example.jpg" width="765" height="574"></pre>
-
-<pre>
-$("img.lazy").lazyload({
-    vertical_only: true
-});
-</pre>
-
-请参阅 `enabled_vertical_only.html`
-
-h4. options对象
-
-你可以将options对象当做`lazyload`方法的第一个参数来使用。
-
-<pre>
-var options = {
-    // 默认情况下，图像会在出现在屏幕上时被加载。如果你想的图像更早地加载，可以使用threshold参数。设置threshold为200，将导致图像在它离视窗边缘还有200px时开始加载。
-    threshold          : 0, // default: 0. 另一个例子: 200
-    // 在页面滚动后，该插件将所有未加载的图像循环一遍。并在循环检查图像是否在视窗中。默认情况下，发现第一个位于视窗外的图片时，循环停止。这是基于以下的假设：页面上图像的顺序与它们在HTML代码中的顺序是一致的。然而对于某些布局，这可能是错误的。你可以通过设置failure_limit参数来控制循环终止的行为（failure_limit参数的数值为最多允许多少张图片被检查出位于视窗外后停止检查循环中剩余未检查的图片）。
-    failure_limit      : 0, // default: 0. 另一个例子: 10
-    // 你可以使用jQuery中已有的事件，如click或mouseover。你也可以使用自定义的时间如sporty或foobar。默认情况下是当用户滚动页面且图像出现在视窗中时。
-    event              : 'scroll', // default: 'scroll'. 另一个例子: 'click'
-    // 默认情况下插件在等待图片完全加载后调用show()。你可以使用想要的任何效果。下面的代码使用了fadeIn效果。你可以在demo页面中查看该效果。
-    effect             : 'show', // default: 'show'. 另一个例子: 'fadein'
-    // 上述效果（`effect`）函数的参数数组。举两个例子，如果`effect`参数设置为`show`且`effect_params`参数设置为[400]，将会调用`$element.show(400)`，即在400ms后显示图片；如果`effect`参数设置为`fadein`且`effect_params`参数设置为[400,completeFunction]，将会调用`fadein(400,completeFunction)`，即在400ms内渐入显示图片，并在渐入动画完成时调用`completeFunction`。
-    effect_params      : null, // default: undefined. 另一个例子: [400].
-    // 你可以将改插件运用在某个容器内，如一个有滚动条的div。只需要传递容器的jQuery对象。我们有在纵向和横向滚动的容器中使用插件的两个demo。
-    container          : window, // default: 'show'. 另一个例子: $('#container')
-    // 默认情况下，图片的真实url被设置在`data-original`属性内，你可以将它们设置在其他属性内，如`url`，这样插件将在`data-url`属性中查找图片的真实地址。
-    data_attribute     : 'original', // default: 'original'. 另一个例子: 'url'
-    // 还存在一些小问题：你可能有不可见的图片，即使它（的位置）已在视图中。为了提高性能，插件默认忽略不可见（`($this.width() || $this.height()) && $this.css("display") !== "none")`）的图片。如果你扔想要加载这些图片，只需将skip_invisible设置为false
-    skip_invisible     : true, // default: true. 另一个例子: false
-    // 当图片在视窗中出现时回调。`this`指向出现的图片元素的节点，参数为尚未出现的图片的数量和配置参数对象。
-    appear             : null, // default: null. 另一个例子: function(elements_left, options){}
-    // 当图片加载完毕时回调。`this`指向出现的图片元素的节点，参数为尚未出现的图片的数量和配置参数对象。
-    load               : null, // default: null. 另一个例子: function(elements_left, options){}
-    // 在大多数情况下，页面只能纵向滚动。此时，只需要检查图片的竖直位置是否出现在视图中即可。如果这样做能提高性能。你可以在只能纵向滚动的页面中将`vertical_only`参数设置为true
-    vertical_only      : false, // default: false. 另一个例子: true
-    // 如果一个img元素没有指定src属性，我们使用这个placeholder。
-    placeholderDataImg : 'data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAANSURBVBhXYzh8+PB/AAffA0nNPuCLAAAAAElFTkSuQmCC',
-    // IE6/7 的 placeholder。
-    placeholderRealImg : 'http://webmap3.map.bdimg.com/yyfm/lazyload/0.0.1/img/placeholder.png'
-}
-$("img.lazy").lazyload(options);
-</pre>
+这个方法将会注销掉掉remember对象，使他不再起任何作用。比如注销掉对对应“可交互元素”的监听。
 
 h2. License
 
-所有代码遵循 "MIT License":http://www.opensource.org/licenses/mit-license.php. 所有图片license是 "Creative Commons Attribution 3.0 Unported License":http://creativecommons.org/licenses/by/3.0/deed.en_US 。也就是说你可以自由地做任何你想做的事情。只是不能在代码中移除我的名字。
+所有代码遵循 "MIT License":http://www.opensource.org/licenses/mit-license.php 。也就是说你可以自由地做任何你想做的事情。只是不能在代码中移除我的名字。
