--- a/README.textile
+++ b/README.textile
@@ -16,14 +16,14 @@ h2. remember.js
 * iOS 3.2+
 * Android 2.1+
 
-h2. 当前用户
-* "百度地图":http://map.baidu.com/
-* "百度团购":http://tuan.baidu.com/
-* +You
+<!-- h2. 当前用户 -->
+<!-- * "百度地图":http://map.baidu.com/ -->
+<!-- * "百度团购":http://tuan.baidu.com/ -->
+<!-- * +You -->
 
 h2. 如何使用?
 
-h3. Basic
+h3. 快速上手
 
 在你HTML代码的尾部引入remember.js：
 
@@ -36,7 +36,7 @@ h3. Basic
 或者使用AMD、CMD兼容的模块加载器：
 
 <pre>
-require('remember.js',function(remember){
+require('remember',function(remember){
     // your code 
 })
 </pre>
@@ -128,6 +128,11 @@ h4. 修改默认配置
 可以通过修改remember.configs对象上的各个字段来打到修改默认配置的效果。
 请注意，需要先修改默认配置，再初始化remember对象实例。
 
+<pre><script>
+// 修改示例：
+remember.configs.oldValueAttributeName = 'data-rememberoldvalue'
+</script></pre>
+
 # @noValueRadioIndexPrefix@ 默认值 @'__R_NVRIP__'@ // 有一组 @name@ 值相同的 @<input type="radio">@ ，但当前被选中的radio可能没有 @value@ 值，我们就要一个模拟的值——用它在这一组radio中的位置来代替它的值来存储。`noValueRadioIndexPrefix`就是这个假值的前缀。举个例子：如果第三个radio被选中了，我们将noValueRadioIndexPrefix+'3'，默认配置下即`__R_NVRIP__2`当做模拟值来存储
 # @oldValueAttributeName@ 默认值 @'data-roldvalue'@ // @<input>，type不为"radio"和"checkbox"@ 和 @textarea@ 必须将旧值存储起来，以便于检查值是否发生了变化。我们将旧制存储到这个dom属性中
 # @textareaLineFeedHolder@ 默认值 @'__R_TLFH_ramdom_769768842_ramdom_'@ // textarea的换行符会在与其他字符串连接时丢弃。为了避免这种情况，我们在这之前用这个属性的值将换行符替换到。在还原时再替换回来
@@ -151,10 +156,22 @@ h4. ignoreIds属性
 
 指向当前remember对象实例初始化时配置项里面的ignoreIds数组，如果不合法，则为 @[]@
 
+h4. selects属性
+
+一般情况下，指向当前remember对象实例wrapperDom内的所有select元素的 "HTMLCollection":https://developer.mozilla.org/en-US/docs/Web/API/HTMLCollection ，除非当wrapperDom本身即为一个select时，指向只包含该select的长度为1的数组
+
+h4. textareas属性
+
+一般情况下，指向当前remember对象实例wrapperDom内的所有textarea元素的 "HTMLCollection":https://developer.mozilla.org/en-US/docs/Web/API/HTMLCollection ，除非当wrapperDom本身即为一个textarea时，指向只包含该textarea的长度为1的数组
+
+h4. inputs属性
+
+一般情况下，指向当前remember对象实例wrapperDom内的所有input元素的 "HTMLCollection":https://developer.mozilla.org/en-US/docs/Web/API/HTMLCollection ，除非当wrapperDom本身即为一个input时，指向只包含该input的长度为1的数组；请注意，inputs里面可能包含remember组件不关注的【type为"radio"、"checkbox"、"submit"、"button"、"hidden"、"image"、"file"或"reset"】的input
+
 h4. setValue方法
 
 <pre><script>
-var myRemember = remember(wrapperDom,options)
+var myRemember = remember(wrapperDom,settings)
 myRemember.setValue()
 </script></pre>
 
@@ -164,7 +181,7 @@ myRemember.setValue()
 h4. getKvObj方法
 
 <pre><script>
-var myRemember = remember(wrapperDom,options)
+var myRemember = remember(wrapperDom,settings)
 myRemember.getKvObj()
 </script></pre>
 
@@ -173,11 +190,11 @@ myRemember.getKvObj()
 h4. stop方法
 
 <pre><script>
-var myRemember = remember(wrapperDom,options)
+var myRemember = remember(wrapperDom,settings)
 myRemember.stop()
 </script></pre>
 
-这个方法将会注销掉掉remember对象，使他不再起任何作用。比如注销掉对对应“可交互元素”的监听。
+这个方法将会注销掉remember对象，使他不再起任何作用。比如注销掉对对应“可交互元素”的监听。
 
 h2. License
 
