忘了修改用户名和邮箱，随便提交一个改回来

--- a/README.textile
+++ b/README.textile
@@ -16,10 +16,7 @@ h2. remember.js
 * iOS 3.2+
 * Android 2.1+
 
-<!-- h2. 当前用户 -->
-<!-- * "百度地图":http://map.baidu.com/ -->
-<!-- * "百度团购":http://tuan.baidu.com/ -->
-<!-- * +You -->
+<!-- h2. 当前用户 --><!-- * "百度地图":http://map.baidu.com/ --><!-- * "百度团购":http://tuan.baidu.com/ --><!-- * +You -->
 
 h2. 如何使用?
 
